<resources>
    <string name="app_name">Football Management System</string>
    <string name="sign_in_as">Sign In As</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="player">Player</string>
    <string name="general_user">General User</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_info">Log In Info</string>
    <string name="enter_user_mail_address">Enter User Mail Address</string>
    <string name="enter_password">Enter Your Password (minimum 6 digit)</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="sign_up_info">Sign Up Info</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_mail_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ent_password">Password</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="my_info">My Info</string>
    <string name="set_objectives">Set Objectives</string>
    <string name="set_income">Set Income</string>
    <string name="my_managers">Managers</string>
    <string name="my_players">Players</string>
    <string name="add_managers">Add Manager</string>
    <string name="add_players">Add Player</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="set_morale">Set Morale</string>
    <string name="view_income">View Income</string>
    <string name="current_match">Current Match</string>
    <string name="view_match">View Match</string>
    <string name="log_out">Log Out</string>
    <string name="view_goals">Goals</string>
    <string name="team_squad_info">Team Players</string>
    <string name="team_match_history">Team Match Statistics</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="position">Position</string>
    <string name="manager_list">Manager List</string>
    <string name="player_list">Player List</string>
    <string name="id">ID</string>
    <string name="match_id">Match Id</string>
    <string name="goals">Goals</string>
    <string name="list_of_player_who_scored">List of Player who Scored</string>
    <string name="goal_times">Goal Times</string>
    <string name="injury">Injury</string>
    <string name="list_of_players_who_get_card">List of Players who get Card</string>
    <string name="list_of_players_get_injured">List of Players get Injured</string>
    <string name="injury_times">Injury Times</string>
    <string name="card">Card</string>
    <string name="card_times">Card Times</string>
    <string name="card_types">Card Types</string>
    <string name="player_id">Player ID</string>
    <string name="player_name">Player Name</string>
    <string name="player_country">Player Country</string>
    <string name="player_position">Player Position</string>
</resources>
