<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/player_profile"
            android:title="@string/my_info"
            android:icon="@drawable/ic_person_black_24dp"
            />

        <item
            android:id="@+id/player_view_income"
            android:title="@string/view_income"
            android:icon="@drawable/ic_attach_money_black_24dp"
            />
        <item
            android:id="@+id/player_goals"
            android:title="@string/view_goals"
            android:icon="@drawable/ic_stars_black_24dp"
            />

         <item
            android:id="@+id/player_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_eject_black_24dp"
            />
    </group>
</menu>