<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_authentication.Log_In_Page_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/UserId"

        android:layout_width            = "match_parent"
        android:layout_height           = "wrap_content"
        android:layout_marginTop        = "120dp"
        android:layout_centerHorizontal = "true"

        android:hint                    = "@string/enter_user_id"
        android:textColorHint           = "@color/colorPrimaryDark"

        app:counterEnabled              = "true"
        app:counterMaxLength            = "50"
        app:helperTextEnabled           = "true"
        app:boxStrokeColor              = "@color/TextColor2"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/uID"
            android:layout_width  = "match_parent"
            android:layout_height = "match_parent"
            android:maxLength     = "50"
            android:inputType     = "text"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/UserPass"

        android:layout_width            = "match_parent"
        android:layout_height           = "wrap_content"
        android:layout_marginTop        = "260dp"
        android:layout_centerHorizontal = "true"

        android:textColorHint           = "@color/colorPrimaryDark"

        app:boxStrokeColor              = "@color/TextColor2"
        app:counterEnabled              = "true"
        app:counterMaxLength            = "20"
        app:helperTextEnabled           = "true"
        app:passwordToggleEnabled       = "true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/Upass"
            android:layout_width  = "match_parent"
            android:layout_height = "match_parent"
            android:hint          = "@string/enter_password"
            android:maxLength     = "20"
            android:inputType     = "textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:layout_marginTop        = "20dp"
        android:layout_centerHorizontal = "true"
        android:text                    = "@string/log_in_info"
        android:fontFamily              = "sans-serif-black"
        android:textSize                = "30sp"
        android:textColor               = "@color/TextColor2"
        />

    <TextView
        android:id                      = "@+id/forgotPass"
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:layout_marginTop        = "380dp"
        android:layout_marginStart      = "5dp"

        android:text                    = "@string/forgot_password"
        android:textSize                = "24sp"
        android:textColor               = "@color/White"
        android:inputType               = "none"
        android:onClick                 = "passwordForgot" />

    <Button
        android:id                      = "@+id/sign_in_button_2"
        android:layout_width            = "250dp"
        android:layout_height           = "30dp"
        android:layout_marginTop        = "480dp"
        android:layout_centerHorizontal = "true"

        android:text                    = "@string/log_in"
        android:textSize                = "20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor               = "@color/TextColor2"
        android:background              = "@color/ButtonColor"
        />

   </RelativeLayout>

</ScrollView>