<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_authentication.Sign_Up_Page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/first_name"

        android:layout_width            = "match_parent"
        android:layout_height           = "60dp"
        android:layout_marginTop        = "100dp"
        android:layout_centerHorizontal = "true"

        android:hint                    = "@string/enter_first_name"
        android:textColorHint           = "@color/colorPrimaryDark"

        app:counterEnabled              = "true"
        app:counterMaxLength            = "15"
        app:helperTextEnabled           = "true"
        app:boxStrokeColor              = "@color/TextColor2"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/f_name"
            android:layout_width  = "match_parent"
            android:layout_height = "40dp"
            android:maxLength     = "15"
            android:textSize      = "16sp"
            android:inputType     = "text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/last_name"

        android:layout_width            = "match_parent"
        android:layout_height           = "60dp"
        android:layout_marginTop        = "170dp"
        android:layout_centerHorizontal = "true"

        android:hint                    = "@string/enter_last_name"
        android:textColorHint           = "@color/colorPrimaryDark"

        app:counterEnabled              = "true"
        app:counterMaxLength            = "15"
        app:helperTextEnabled           = "true"
        app:boxStrokeColor              = "@color/TextColor2"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/l_name"
            android:layout_width  = "match_parent"
            android:layout_height = "40dp"
            android:maxLength     = "15"
            android:textSize      = "16sp"
            android:inputType     = "text"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/User_Mail"

        android:layout_width            = "match_parent"
        android:layout_height           = "60dp"
        android:layout_marginTop        = "240dp"
        android:layout_centerHorizontal = "true"

        android:hint                    = "@string/enter_mail_address"
        android:textColorHint           = "@color/colorPrimaryDark"

        app:counterEnabled              = "true"
        app:counterMaxLength            = "30"
        app:helperTextEnabled           = "true"
        app:boxStrokeColor              = "@color/TextColor2"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/u_email"
            android:layout_width  = "match_parent"
            android:layout_height = "40dp"
            android:maxLength     = "30"
            android:textSize      = "16sp"
            android:inputType     = "textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/User_Password"

        android:layout_width            = "match_parent"
        android:layout_height           = "60dp"
        android:layout_marginTop        = "310dp"
        android:layout_centerHorizontal = "true"

        android:textColorHint           = "@color/colorPrimaryDark"

        app:boxStrokeColor              = "@color/TextColor2"
        app:counterEnabled              = "true"
        app:counterMaxLength            = "15"
        app:helperTextEnabled           = "true"
        app:passwordToggleEnabled       = "true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/u_pass"
            android:layout_width  = "match_parent"
            android:layout_height = "40dp"
            android:hint          = "@string/ent_password"
            android:maxLength     = "15"
            android:textSize      = "16sp"
            android:inputType     = "textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id                      = "@+id/Confirm_Password"

        android:layout_width            = "match_parent"
        android:layout_height           = "60dp"
        android:layout_marginTop        = "380dp"
        android:layout_centerHorizontal = "true"

        android:textColorHint           = "@color/colorPrimaryDark"

        app:boxStrokeColor              = "@color/TextColor2"
        app:counterEnabled              = "true"
        app:counterMaxLength            = "15"
        app:helperTextEnabled           = "true"
        app:passwordToggleEnabled       = "true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id            = "@+id/c_pass"
            android:layout_width  = "match_parent"
            android:layout_height = "40dp"
            android:hint          = "@string/confirm_password"
            android:maxLength     = "15"
            android:textSize      = "16sp"
            android:inputType     = "textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width            = "wrap_content"
        android:layout_height           = "wrap_content"
        android:layout_marginTop        = "20dp"
        android:layout_centerHorizontal = "true"
        android:text                    = "@string/sign_up_info"
        android:fontFamily              = "sans-serif-black"
        android:textSize                = "30sp"
        android:textColor               = "@color/TextColor2"
        />


    <Button
        android:id                      = "@+id/Submit"
        android:layout_width            = "270dp"
        android:layout_height           = "30dp"
        android:layout_marginTop        = "490dp"
        android:layout_centerHorizontal = "true"

        android:text                    = "@string/submit"
        android:textSize                = "20sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor               = "@color/TextColor2"
        android:background              = "@color/ButtonColor"
        />

</RelativeLayout>
</ScrollView>